--- a/curl_noise/index.html
+++ b/curl_noise/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5js_sketch</title>
-    <!-- P5.jsライブラリの読み込み -->
+    <title>Curl Noise - Demonstration</title>
+    <meta name="description" content="A demonstration of curl noise using p5.js.">
+    <meta name="keywords" content="curl noise, p5.js, perlin noise, simulation">
+    <meta name="author" content="Shuto HATANAKA">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
-    <!-- 必要に応じてサウンドライブラリも読み込み -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script> -->
+
     <style>
         body {
             margin: 0;
@@ -25,7 +27,8 @@
             height: 100vh;
         }
     </style>
-    <script src="./curl_agent3.js"></script>
+    
+    <script src="./curl.js"></script>
 </head>
 
 <body>
